[package]
name = "metro-vga"
version = "0.1.0"
authors = ["Kai Wells <support@kaiwells.me>"]
edition = "2018"

[dependencies]
cortex-m = "~0.6"
cortex-m-rt = "~0.6.12"
embedded-hal = "~0.2.3"
metro_m4 = "0.5.0"
nb = "~0.1"
panic-halt = "~0.2"

[profile.dev]
incremental = false
codegen-units = 1
debug = true
lto = true
panic = "abort"

[profile.release]
debug = true
lto = true
opt-level = "s"
panic = "abort"
